# Solution-Selector

./: CMakeLists.txt  README  README.md
config/: qt.conf
data/: solution.json
release/: installerFrameworkDeploy.bat.cmakein
release/installerFramework/config/: config.xml  controlScript.qs
src/: CMakeLists.txt  main.cc
src/core/: Clipboard.cc  UtilsHelper.cc  UtilsHelper.h
src/core/utils/: Clipboard.h
src/qml/: DelegateItem.qml  main.qml  qml.qrc
src/qml/utils/: Pane.qml  Popup.qml  ScrollBar.qml
tests/: CMakeLists.txt  tst_test.cc
